--- a/site/public/app.less
+++ b/site/public/app.less
@@ -1,21 +1,27 @@
 
 @theme-color-1: #503047;
-@theme-color-2: #ffffff;
+@theme-color-2: #fafafa;
 @theme-color-3: #d0e3c4;
 @theme-color-4: #adc698;
 @theme-color-5: #c05746;
 
+h1, h1 {
+  margin: 0;
+}
+
 body {
-  background-color: #fafafa;
-  font-family: 'Roboto', sans-serif;
+
+  background-color: @theme-color-2;
+  font-family: 'Open Sans', sans-serif;
+
   > main {
 
     > section {
       border: solid 1px @theme-color-1;
-      border-radius: 5px;
       margin: 1rem;
       padding: 3rem 1rem 1rem 1rem;
       position: relative;
+      overflow: hidden;
 
       > h1, > h2 {
         font-weight: normal;
@@ -25,47 +31,50 @@ body {
       }
 
       > h1:first-child {
+        text-transform: uppercase;
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
-        //font-weight: bold;
+        font-size: 1rem;
+        font-weight: bold;
         padding: 0.5rem 1rem;
         background-color: @theme-color-1;
         color: @theme-color-2;
-        border-radius: 1px;
         box-sizing: border-box;
       }
 
       &.transaction {
         > table {
+          width: 100%;
           border-collapse: collapse;
           tr {
+
             > td, th {
+
               border: solid 1px @theme-color-1;
               text-align: center;
+              padding: 0.4rem;
             }
+
+            > th {
+              background-color: @theme-color-3;
+            }
+
+            > td {
+              &:nth-child(3){
+                text-align: left;
+              }
+            }
+
           }
         }
       }
 
       &.send {
 
-        /*> div {
-          width: 100%;
-          position: relative;
-          display: flex;
-          justify-items: stretch;
-          align-items: stretch;
-          > textarea {
-            flex: 2 0 0;
-            resize: none;
-          }
-        }*/
 
       }
-
     }
   }
-
 }
