--- a/site/public/app.less
+++ b/site/public/app.less
@@ -10,7 +10,7 @@ h1, h1 {
 }
 
 body {
-
+  padding: 2rem;
   background-color: @theme-color-2;
   font-family: 'Open Sans', sans-serif;
 
@@ -71,8 +71,60 @@ body {
         }
       }
 
-      &.send {
+      &.validate {
+        > p {
+          white-space: pre-wrap;
+        }
 
+        > div.keypad {
+
+          > input[type=number] {
+            width: 2rem;
+            height: 2rem;
+            text-align: center;
+            overflow: hidden;
+            border-radius: 3px;
+            padding: 0;
+            border: solid 1px @theme-color-4;
+            transition: background-color 0.2s;
+            margin: 0.2rem;
+            box-sizing: border-box;
+            &:focus {
+              background-color: @theme-color-1;
+              color: @theme-color-2;
+            }
+            &::-webkit-inner-spin-button, &::-webkit-outer-spin-button {
+              -webkit-appearance: none;
+              margin: 0;
+            }
+            &:first-child {
+              margin-left: 0;
+            }
+          }
+
+          > button.verify {
+            margin: 0.2rem;
+            box-sizing: border-box;
+            height: 2rem;
+            background-color: @theme-color-1;
+            border-radius: 3px;
+            color: @theme-color-2;
+            border: none;
+            padding: 0 1rem;
+            cursor: pointer;
+          }
+        }
+
+        > button.resend {
+          display: inline;
+          padding: 0;
+          margin: 0;
+          border: none;
+          background-color: transparent;
+          text-decoration: underline;
+          font-size: 0.8rem;
+          cursor: pointer;
+        }
 
       }
     }
