--- a/site/public/app.less
+++ b/site/public/app.less
@@ -129,4 +129,29 @@ body {
       }
     }
   }
+
+  &.registration {
+    form {
+      margin: 1rem;
+      > div {
+        > label {
+          display: inline-block;
+          width: 9rem;
+        }
+        > input {
+          width: 10rem;
+        }
+      }
+
+      > div {
+        margin: 0.5rem;
+      }
+    }
+    div.errors {
+      padding: 1rem;
+      background-color: red;
+      color: #fff;
+      width: 100%;
+    }
+  }
 }
